Hand a reading the rules its world has, rather than a rule it must consult
Which parts of a clause a counterfactual world holds was a predicate over
one part, and every walk over that clause had to be written to ask it. Four
were and one was not, so the connectives were composed over conjuncts every
walk beside them had left out — and the settled answer came back the same
with a conjunct and without it, which is what left the ends a choice was
holding owed to nobody.

Adding a view for the walk that was not written to left the predicate where
it was, with a fifth caller. So the predicate is gone. A world hands out the
clause it has, the parts of that clause are what every walk reads, and there
is nowhere to ask whether one part is in it: a walk written tomorrow cannot
read the whole clause by forgetting to ask, because forgetting is no longer
something it can do. `Written` carries the world it was read in, so the two
walks over a declaration's clauses take the parts from it rather than
filtering a list each for itself, and the guarantees a value's type states
take theirs the same way.

And which rules there are is settled above how far a reading goes into them.
A reading that takes a conjunction whole was handed the node with an omitted
conjunct still under it, which made a world hold for the readings that
descend and for no others. Every reading of a declaration's connectives
descends, so no model shows it; the fold is held to it directly, by a
reading that stops where those do not.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>